# rye-dependabot-test

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-drafter.yml
src/rye_dependabot_test/: __init__.py
