[project]
name = "rye-dependabot-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kevin Stillhammer", email = "kevin.stillhammer@gmail.com" }
]
dependencies = [
    "backoff==2.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rye_dependabot_test:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye_dependabot_test"]
